[tool.poetry]
name = "fokusapp"
version = "0.1.0"
description = "App, die beim Fokussieren auf Aufgaben helfen soll"
authors = ["lukas <lukas.meinzer.98@web.de>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
